--- a/items.html
+++ b/items.html
@@ -2,100 +2,296 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <title>Menu - ChatPoint</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet"/>
+  
   <style>
     :root {
       --primary: #e63946;
+      --primary-dark: #d00000;
       --dark: #1d3557;
+      --gray: #457b9d;
       --light: #f1faee;
-      --card-bg: white;
-      --shadow: 0 8px 30px rgba(0,0,0,0.12);
+      --card-bg: rgba(255, 255, 255, 0.94);
+      --shadow-sm: 0 6px 20px rgba(0,0,0,0.08);
       --radius: 16px;
     }
-    body { font-family: 'Poppins', sans-serif; background: var(--light); margin: 0; padding: 0; }
+
+    * { margin:0; padding:0; box-sizing:border-box; }
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: var(--light);
+      color: var(--dark);
+      min-height: 100vh;
+    }
+
     header {
       background: white;
       padding: 14px 18px;
       position: sticky;
       top: 0;
-      z-index: 100;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      z-index: 1000;
+      box-shadow: var(--shadow-sm);
       display: flex;
       align-items: center;
       justify-content: space-between;
     }
-    .back-btn { font-size: 1.8rem; color: var(--primary); background: none; border: none; cursor: pointer; }
-    .page-title { font-size: 1.4rem; font-weight: 700; }
-    .cart-icon {
-      font-size: 1.6rem;
+
+    .back-btn {
+      font-size: 1.9rem;
+      background: none;
+      border: none;
       color: var(--primary);
-      position: relative;
       cursor: pointer;
+      padding: 8px;
+      border-radius: 50%;
     }
-    .cart-count {
-      position: absolute;
-      top: -8px;
-      right: -10px;
+
+    .back-btn:hover { background: rgba(230,57,70,0.1); }
+
+    .page-title {
+      font-size: 1.45rem;
+      font-weight: 700;
+    }
+
+    /* New Fixed Cart Bar (appears when cart has items) */
+    .cart-bar {
+      position: fixed;
+      top: 60px; /* below header */
+      left: 0;
+      right: 0;
+      background: white;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.12);
+      padding: 12px 18px;
+      display: none;
+      align-items: center;
+      justify-content: space-between;
+      z-index: 999;
+      border-bottom: 1px solid #eee;
+    }
+
+    .cart-bar.visible {
+      display: flex;
+    }
+
+    .cart-info {
+      font-size: 1.1rem;
+      font-weight: 600;
+      color: var(--primary);
+    }
+
+    .view-cart-btn {
       background: var(--primary);
       color: white;
-      font-size: 0.75rem;
+      border: none;
+      padding: 10px 18px;
+      border-radius: 12px;
       font-weight: 700;
-      border-radius: 50%;
-      padding: 2px 6px;
-      min-width: 18px;
+      cursor: pointer;
+    }
+
+    .view-cart-btn:hover {
+      background: var(--primary-dark);
+    }
+
+    main {
+      padding: 90px 18px 220px; /* extra top padding for cart bar */
+    }
+
+    h1.shop-name {
+      font-size: 2rem;
+      font-weight: 800;
+      color: var(--primary);
+      margin: 0 0 28px;
       text-align: center;
     }
-    main { padding: 20px; }
-    h1 { text-align: center; color: var(--primary); font-size: 2.2rem; margin: 20px 0 30px; }
-    .items-container { display: grid; gap: 20px; }
+
+    .veg-nonveg-filter {
+      display: none;
+      justify-content: center;
+      margin: 0 auto 24px;
+      max-width: 380px;
+    }
+    .veg-nonveg-filter.active { display: flex; }
+    .filter-btn {
+      flex: 1;
+      padding: 14px;
+      font-weight: 700;
+      font-size: 1.05rem;
+      border: none;
+      cursor: pointer;
+      color: white;
+    }
+    .filter-btn.veg { background: #2a9d8f; border-radius: 14px 0 0 14px; }
+    .filter-btn.nonveg { background: var(--primary); border-radius: 0 14px 14px 0; }
+    .filter-btn.active { transform: scale(1.05); box-shadow: 0 0 0 4px rgba(255,255,255,0.4); }
+
+    .items-container {
+      display: grid;
+      gap: 20px;
+    }
+
     .item-card {
       background: var(--card-bg);
       border-radius: var(--radius);
-      box-shadow: var(--shadow);
       overflow: hidden;
+      box-shadow: var(--shadow-sm);
+      transition: all 0.25s ease;
     }
-    .item-content { padding: 16px; }
-    .item-name { font-size: 1.25rem; font-weight: 700; margin-bottom: 8px; }
-    .item-price { font-size: 1.45rem; font-weight: 800; color: var(--primary); margin: 8px 0; }
+
+    .item-card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 16px 40px rgba(230,57,70,0.18);
+    }
+
+    .item-content {
+      padding: 18px;
+    }
+
+    .item-name {
+      font-size: 1.25rem;
+      font-weight: 700;
+      margin-bottom: 8px;
+    }
+
+    .item-price {
+      font-size: 1.45rem;
+      font-weight: 800;
+      color: var(--primary);
+      margin: 8px 0 12px;
+    }
+
     .quantity-row {
       display: flex;
       align-items: center;
       gap: 16px;
     }
+
     .qty-btn {
       width: 44px;
       height: 44px;
       border-radius: 50%;
-      background: rgba(230,57,70,0.1);
+      background: rgba(230,57,70,0.08);
       border: none;
       font-size: 1.5rem;
       color: var(--primary);
       cursor: pointer;
+      transition: all 0.2s;
     }
-    .qty-btn:hover { background: rgba(230,57,70,0.2); }
-    .qty-value { font-size: 1.3rem; font-weight: 700; min-width: 40px; text-align: center; }
+
+    .qty-btn:hover {
+      background: rgba(230,57,70,0.18);
+    }
+
+    .qty-value {
+      font-size: 1.35rem;
+      font-weight: 700;
+      min-width: 40px;
+      text-align: center;
+    }
+
+    .cart-summary-bar {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: white;
+      padding: 16px 20px;
+      box-shadow: 0 -8px 25px rgba(0,0,0,0.15);
+      z-index: 900;
+      border-radius: 20px 20px 0 0;
+    }
+
+    .summary-row {
+      display: flex;
+      justify-content: space-between;
+      font-size: 1.1rem;
+      margin-bottom: 10px;
+    }
+
+    .grand-total-row {
+      font-size: 1.7rem;
+      font-weight: 900;
+      color: var(--primary);
+      text-align: center;
+      margin: 16px 0;
+    }
+
+    .proceed-btn {
+      background: var(--primary);
+      color: white;
+      border: none;
+      width: 100%;
+      padding: 16px;
+      font-size: 1.25rem;
+      font-weight: 700;
+      border-radius: 14px;
+      cursor: pointer;
+    }
+
+    .proceed-btn:hover {
+      background: var(--primary-dark);
+    }
+
+    .hidden { display: none !important; }
   </style>
 </head>
 <body>
 
 <header>
-  <button class="back-btn" onclick="history.back()">←</button>
+  <!-- Back button now links to index.html -->
+  <button class="back-btn" onclick="window.location.href='index.html'">←</button>
   <div class="page-title">Menu</div>
-  <div class="cart-icon" onclick="window.location.href='cart.html'">
-    <i class="fas fa-shopping-cart"></i>
-    <span class="cart-count" id="cart-count">0</span>
-  </div>
+  <div></div>
 </header>
 
+<!-- Fixed Cart Bar (shows only when cart has items) -->
+<div class="cart-bar" id="cartBar">
+  <div class="cart-info">
+    <strong id="cartCountBar">0</strong> items added
+  </div>
+  <button class="view-cart-btn" onclick="window.location.href='cart.html'">
+    View Cart →
+  </button>
+</div>
+
 <main>
-  <h1 id="shopName">Loading...</h1>
+  <h1 class="shop-name" id="shopName">Loading...</h1>
+
+  <div class="veg-nonveg-filter" id="vegNonVegFilter">
+    <button class="filter-btn veg active" onclick="filterItems('veg')">Veg</button>
+    <button class="filter-btn nonveg" onclick="filterItems('nonveg')">Non-Veg</button>
+  </div>
+
   <div class="items-container" id="itemsContainer"></div>
 </main>
 
+<!-- Bottom Floating Cart Summary -->
+<div class="cart-summary-bar hidden" id="cartSummaryBar">
+  <div class="summary-row">
+    <span>Subtotal</span>
+    <span id="subtotal">₹0</span>
+  </div>
+  <div class="summary-row">
+    <span>Delivery</span>
+    <span id="delivery">₹0</span>
+  </div>
+  <div class="grand-total-row">
+    <span>Total</span>
+    <span id="grandTotal">₹0</span>
+  </div>
+  <button class="proceed-btn" onclick="window.location.href='cart.html'">
+    Proceed to Checkout
+  </button>
+</div>
+
 <script>
+// =============================================
+// CONFIG - ALL SHOPS & ITEMS (complete)
+// =============================================
+
 const DELIVERY_THRESHOLD = 100;
 const DELIVERY_FEE = 20;
 
@@ -395,6 +591,14 @@ const shopMenus = {
   ]
 };
 
+// =============================================
+// UTILITIES
+// =============================================
+
+function getDisplayedPrice(original) {
+  return original <= 100 ? original + 20 : original + 40;
+}
+
 function getShopFromURL() {
   const params = new URLSearchParams(location.search);
   return decodeURIComponent(params.get("shop") || "");
@@ -404,20 +608,56 @@ function formatPrice(num) {
   return "₹" + Math.round(num);
 }
 
-function getDisplayedPrice(original) {
-  return original <= 100 ? original + 20 : original + 40;
-}
+// =============================================
+// CART LOGIC
+// =============================================
 
 let cart = JSON.parse(localStorage.getItem("chatpoint_cart")) || {};
 
-function updateCartCount() {
-  let count = 0;
+function saveCart() {
+  localStorage.setItem("chatpoint_cart", JSON.stringify(cart));
+  updateCartUI();
+}
+
+function getCartSubtotal() {
+  let total = 0;
   for (const shop in cart) {
     for (const name in cart[shop]) {
-      count += cart[shop][name].qty;
+      total += cart[shop][name].qty * cart[shop][name].price;
     }
   }
+  return total;
+}
+
+function updateCartUI() {
+  let count = 0;
+  for (const shop in cart) {
+    for (const item in cart[shop]) {
+      count += cart[shop][item].qty;
+    }
+  }
+
   document.getElementById("cart-count").textContent = count;
+  document.getElementById("cartCountBar").textContent = count;
+
+  // Show/hide top cart bar
+  const cartBar = document.getElementById("cartBar");
+  if (count > 0) {
+    cartBar.classList.add("visible");
+  } else {
+    cartBar.classList.remove("visible");
+  }
+
+  const bar = document.getElementById("cartSummaryBar");
+  bar.classList.toggle("hidden", count === 0);
+
+  const subtotal = getCartSubtotal();
+  const delivery = subtotal < DELIVERY_THRESHOLD ? DELIVERY_FEE : 0;
+  const grand = subtotal + delivery;
+
+  document.getElementById("subtotal").textContent = formatPrice(subtotal);
+  document.getElementById("delivery").textContent = formatPrice(delivery);
+  document.getElementById("grandTotal").textContent = formatPrice(grand);
 }
 
 function changeQty(shop, name, price, delta) {
@@ -429,10 +669,14 @@ function changeQty(shop, name, price, delta) {
   if (cart[shop][name].qty === 0) delete cart[shop][name];
   if (Object.keys(cart[shop]).length === 0) delete cart[shop];
 
-  localStorage.setItem("chatpoint_cart", JSON.stringify(cart));
-  updateCartCount();
+  saveCart();
   renderMenu();
+  updateCartUI();
 }
+
+// =============================================
+// RENDER MENU
+// =============================================
 
 function renderMenu() {
   const container = document.getElementById("itemsContainer");
@@ -441,14 +685,25 @@ function renderMenu() {
   const shop = getShopFromURL();
   const items = shopMenus[shop] || [];
 
-  document.getElementById("shopName").textContent = shop || "Select a shop";
+  document.getElementById("shopName").textContent = shop || "Shop not found";
+
+  document.getElementById("vegNonVegFilter").classList.toggle("active", shop === "Dolphin Hotel");
 
   if (items.length === 0) {
-    container.innerHTML = '<div style="text-align:center;padding:100px 20px;color:#777;">No items available</div>';
+    container.innerHTML = `
+      <div class="empty-state">
+        <i class="fas fa-utensils"></i><br>No items available
+      </div>
+    `;
     return;
   }
 
   items.forEach(item => {
+    if (shop === "Dolphin Hotel") {
+      if (currentFilter === "veg" && item.type === "nonveg") return;
+      if (currentFilter === "nonveg" && item.type === "veg") return;
+    }
+
     const price = getDisplayedPrice(item.originalPrice);
     const qty = cart[shop]?.[item.name]?.qty || 0;
 
@@ -469,8 +724,20 @@ function renderMenu() {
   });
 }
 
+// =============================================
+// INIT
+// =============================================
+
+const currentShop = getShopFromURL();
+if (currentShop && shopMenus[currentShop]) {
+  document.getElementById("shopName").textContent = currentShop;
+} else {
+  document.getElementById("shopName").textContent = "Shop not found";
+}
+
+// Initial load
 renderMenu();
-updateCartCount();
+updateCartUI();
 </script>
 </body>
 </html>
