--- a/items.html
+++ b/items.html
@@ -6,25 +6,23 @@
   <title>Menu - ChatPoint</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet"/>
-  
+
   <style>
     :root {
       --primary: #e63946;
       --primary-dark: #d00000;
       --dark: #1d3557;
-      --gray: #457b9d;
       --light: #f1faee;
-      --card-bg: rgba(255, 255, 255, 0.94);
-      --shadow-sm: 0 6px 20px rgba(0,0,0,0.08);
+      --card-bg: rgba(255,255,255,0.95);
+      --shadow-sm: 0 6px 20px rgba(0,0,0,0.1);
       --radius: 16px;
     }
 
-    * { margin:0; padding:0; box-sizing:border-box; }
     body {
-      font-family: 'Poppins', sans-serif;
+      margin: 0;
+      padding: 0;
       background: var(--light);
-      color: var(--dark);
-      min-height: 100vh;
+      font-family: Poppins, sans-serif;
     }
 
     header {
@@ -33,267 +31,204 @@
       position: sticky;
       top: 0;
       z-index: 1000;
-      box-shadow: var(--shadow-sm);
       display: flex;
-      align-items: center;
       justify-content: space-between;
+      align-items: center;
+      box-shadow: var(--shadow-sm);
     }
 
     .back-btn {
       font-size: 1.9rem;
-      background: none;
       border: none;
-      color: var(--primary);
+      background: none;
       cursor: pointer;
-      padding: 8px;
-      border-radius: 50%;
+      color: var(--primary);
     }
-
-    .back-btn:hover { background: rgba(230,57,70,0.1); }
 
     .page-title {
-      font-size: 1.45rem;
+      font-size: 1.5rem;
       font-weight: 700;
     }
 
-    /* New Fixed Cart Bar (appears when cart has items) */
+    /* TOP CART BAR */
     .cart-bar {
+      display: none;
       position: fixed;
-      top: 60px; /* below header */
+      top: 60px;
       left: 0;
       right: 0;
-      background: white;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.12);
+      background: #fff;
       padding: 12px 18px;
-      display: none;
-      align-items: center;
-      justify-content: space-between;
       z-index: 999;
-      border-bottom: 1px solid #eee;
-    }
-
-    .cart-bar.visible {
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
       display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
 
-    .cart-info {
-      font-size: 1.1rem;
-      font-weight: 600;
-      color: var(--primary);
-    }
+    .cart-bar.visible { display: flex !important; }
 
-    .view-cart-btn {
-      background: var(--primary);
-      color: white;
-      border: none;
-      padding: 10px 18px;
-      border-radius: 12px;
-      font-weight: 700;
-      cursor: pointer;
-    }
-
-    .view-cart-btn:hover {
-      background: var(--primary-dark);
-    }
-
-    main {
-      padding: 90px 18px 220px; /* extra top padding for cart bar */
-    }
-
-    h1.shop-name {
-      font-size: 2rem;
-      font-weight: 800;
-      color: var(--primary);
-      margin: 0 0 28px;
-      text-align: center;
-    }
-
-    .veg-nonveg-filter {
-      display: none;
-      justify-content: center;
-      margin: 0 auto 24px;
-      max-width: 380px;
-    }
-    .veg-nonveg-filter.active { display: flex; }
-    .filter-btn {
-      flex: 1;
-      padding: 14px;
-      font-weight: 700;
-      font-size: 1.05rem;
-      border: none;
-      cursor: pointer;
-      color: white;
-    }
-    .filter-btn.veg { background: #2a9d8f; border-radius: 14px 0 0 14px; }
-    .filter-btn.nonveg { background: var(--primary); border-radius: 0 14px 14px 0; }
-    .filter-btn.active { transform: scale(1.05); box-shadow: 0 0 0 4px rgba(255,255,255,0.4); }
-
+    /* MENU GRID */
     .items-container {
+      padding: 90px 18px 200px;
       display: grid;
-      gap: 20px;
+      gap: 18px;
     }
 
     .item-card {
       background: var(--card-bg);
       border-radius: var(--radius);
-      overflow: hidden;
-      box-shadow: var(--shadow-sm);
-      transition: all 0.25s ease;
-    }
-
-    .item-card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 16px 40px rgba(230,57,70,0.18);
-    }
-
-    .item-content {
       padding: 18px;
+      box-shadow: var(--shadow-sm);
     }
 
     .item-name {
-      font-size: 1.25rem;
+      font-size: 1.3rem;
       font-weight: 700;
-      margin-bottom: 8px;
     }
 
     .item-price {
-      font-size: 1.45rem;
-      font-weight: 800;
       color: var(--primary);
-      margin: 8px 0 12px;
+      font-weight: 800;
+      font-size: 1.4rem;
+      margin: 10px 0;
     }
 
     .quantity-row {
       display: flex;
+      gap: 15px;
       align-items: center;
-      gap: 16px;
     }
 
     .qty-btn {
-      width: 44px;
-      height: 44px;
+      width: 42px;
+      height: 42px;
       border-radius: 50%;
-      background: rgba(230,57,70,0.08);
+      background: rgba(230,57,70,0.1);
       border: none;
-      font-size: 1.5rem;
-      color: var(--primary);
+      font-size: 1.4rem;
       cursor: pointer;
-      transition: all 0.2s;
+      color: var(--primary);
     }
 
-    .qty-btn:hover {
-      background: rgba(230,57,70,0.18);
-    }
-
-    .qty-value {
-      font-size: 1.35rem;
-      font-weight: 700;
-      min-width: 40px;
-      text-align: center;
-    }
-
+    /* BOTTOM BAR */
     .cart-summary-bar {
       position: fixed;
       bottom: 0;
       left: 0;
       right: 0;
-      background: white;
       padding: 16px 20px;
+      background: #fff;
       box-shadow: 0 -8px 25px rgba(0,0,0,0.15);
-      z-index: 900;
       border-radius: 20px 20px 0 0;
-    }
-
-    .summary-row {
-      display: flex;
-      justify-content: space-between;
-      font-size: 1.1rem;
-      margin-bottom: 10px;
-    }
-
-    .grand-total-row {
-      font-size: 1.7rem;
-      font-weight: 900;
-      color: var(--primary);
-      text-align: center;
-      margin: 16px 0;
-    }
-
-    .proceed-btn {
-      background: var(--primary);
-      color: white;
-      border: none;
-      width: 100%;
-      padding: 16px;
-      font-size: 1.25rem;
-      font-weight: 700;
-      border-radius: 14px;
+      display: none;
       cursor: pointer;
     }
 
-    .proceed-btn:hover {
-      background: var(--primary-dark);
-    }
+    .cart-summary-bar.visible { display: block !important; }
 
-    .hidden { display: none !important; }
+    .grand-total-row {
+      text-align: center;
+      font-size: 1.7rem;
+      font-weight: 900;
+      color: var(--primary);
+    }
   </style>
 </head>
+
 <body>
 
 <header>
-  <!-- Back button now links to index.html -->
-  <button class="back-btn" onclick="window.location.href='index.html'">←</button>
+  <button class="back-btn" onclick="history.back()">←</button>
   <div class="page-title">Menu</div>
-  <div></div>
+  <span id="cart-count" style="display:none">0</span>
 </header>
 
-<!-- Fixed Cart Bar (shows only when cart has items) -->
 <div class="cart-bar" id="cartBar">
-  <div class="cart-info">
-    <strong id="cartCountBar">0</strong> items added
-  </div>
-  <button class="view-cart-btn" onclick="window.location.href='cart.html'">
-    View Cart →
-  </button>
+  <div class="cart-info"><b id="cartCountBar">0</b> items added</div>
+  <button class="view-cart-btn" onclick="window.location.href='cart.html'">View Cart →</button>
 </div>
 
-<main>
-  <h1 class="shop-name" id="shopName">Loading...</h1>
+<h1 class="shop-name" id="shopName" style="text-align:center; margin-top:20px;">Loading...</h1>
 
-  <div class="veg-nonveg-filter" id="vegNonVegFilter">
-    <button class="filter-btn veg active" onclick="filterItems('veg')">Veg</button>
-    <button class="filter-btn nonveg" onclick="filterItems('nonveg')">Non-Veg</button>
-  </div>
+<div class="items-container" id="itemsContainer"></div>
 
-  <div class="items-container" id="itemsContainer"></div>
-</main>
-
-<!-- Bottom Floating Cart Summary -->
-<div class="cart-summary-bar hidden" id="cartSummaryBar">
-  <div class="summary-row">
-    <span>Subtotal</span>
-    <span id="subtotal">₹0</span>
-  </div>
-  <div class="summary-row">
-    <span>Delivery</span>
-    <span id="delivery">₹0</span>
-  </div>
-  <div class="grand-total-row">
-    <span>Total</span>
-    <span id="grandTotal">₹0</span>
-  </div>
-  <button class="proceed-btn" onclick="window.location.href='cart.html'">
-    Proceed to Checkout
-  </button>
+<!-- BOTTOM BAR -->
+<div class="cart-summary-bar" id="cartSummaryBar" onclick="window.location.href='cart.html'">
+  <div class="grand-total-row">Total: <span id="grandTotal">₹0</span></div>
 </div>
 
 <script>
-// =============================================
-// CONFIG - ALL SHOPS & ITEMS (complete)
-// =============================================
+/* ------------------- PRICING ------------------- */
+function getDisplayedPrice(original) {
+  return original <= 100 ? original + 20 : original + 40;
+}
 
+/* ------------------- CART ------------------- */
 const DELIVERY_THRESHOLD = 100;
 const DELIVERY_FEE = 20;
+
+let cart = JSON.parse(localStorage.getItem("chatpoint_cart")) || {};
+
+function saveCart() {
+  localStorage.setItem("chatpoint_cart", JSON.stringify(cart));
+  updateCartUI();
+}
+
+function getCartSubtotal() {
+  let total = 0;
+  for (const shop in cart)
+    for (const item in cart[shop])
+      total += cart[shop][item].qty * cart[shop][item].price;
+  return total;
+}
+
+function updateCartUI() {
+  let count = 0;
+  for (const shop in cart)
+    for (const item in cart[shop])
+      count += cart[shop][item].qty;
+
+  document.getElementById("cart-count").textContent = count;
+  document.getElementById("cartCountBar").textContent = count;
+
+  const topBar = document.getElementById("cartBar");
+  const bottomBar = document.getElementById("cartSummaryBar");
+
+  if (count > 0) {
+    topBar.classList.add("visible");
+    bottomBar.classList.add("visible");
+  } else {
+    topBar.classList.remove("visible");
+    bottomBar.classList.remove("visible");
+  }
+
+  const subtotal = getCartSubtotal();
+  const delivery = subtotal < DELIVERY_THRESHOLD ? DELIVERY_FEE : 0;
+  const grand = subtotal + delivery;
+
+  document.getElementById("grandTotal").textContent = "₹" + grand;
+}
+
+/* ------------------- QUANTITY ------------------- */
+function changeQty(shop, name, price, delta) {
+  if (!cart[shop]) cart[shop] = {};
+  if (!cart[shop][name]) cart[shop][name] = { qty: 0, price };
+
+  cart[shop][name].qty = Math.max(0, cart[shop][name].qty + delta);
+
+  if (cart[shop][name].qty === 0) delete cart[shop][name];
+  if (Object.keys(cart[shop]).length === 0) delete cart[shop];
+
+  saveCart();
+  renderMenu();
+}
+
+/* ------------------- MENU ------------------- */
+function getShopFromURL() {
+  const params = new URLSearchParams(location.search);
+  return decodeURIComponent(params.get("shop") || "");
+}
 
 const shopMenus = {
   "Pizza Spot": [
@@ -590,154 +525,36 @@ const shopMenus = {
     { name: "Mango Cake", originalPrice: 612 - 25 }
   ]
 };
-
-// =============================================
-// UTILITIES
-// =============================================
-
-function getDisplayedPrice(original) {
-  return original <= 100 ? original + 20 : original + 40;
-}
-
-function getShopFromURL() {
-  const params = new URLSearchParams(location.search);
-  return decodeURIComponent(params.get("shop") || "");
-}
-
-function formatPrice(num) {
-  return "₹" + Math.round(num);
-}
-
-// =============================================
-// CART LOGIC
-// =============================================
-
-let cart = JSON.parse(localStorage.getItem("chatpoint_cart")) || {};
-
-function saveCart() {
-  localStorage.setItem("chatpoint_cart", JSON.stringify(cart));
-  updateCartUI();
-}
-
-function getCartSubtotal() {
-  let total = 0;
-  for (const shop in cart) {
-    for (const name in cart[shop]) {
-      total += cart[shop][name].qty * cart[shop][name].price;
-    }
-  }
-  return total;
-}
-
-function updateCartUI() {
-  let count = 0;
-  for (const shop in cart) {
-    for (const item in cart[shop]) {
-      count += cart[shop][item].qty;
-    }
-  }
-
-  document.getElementById("cart-count").textContent = count;
-  document.getElementById("cartCountBar").textContent = count;
-
-  // Show/hide top cart bar
-  const cartBar = document.getElementById("cartBar");
-  if (count > 0) {
-    cartBar.classList.add("visible");
-  } else {
-    cartBar.classList.remove("visible");
-  }
-
-  const bar = document.getElementById("cartSummaryBar");
-  bar.classList.toggle("hidden", count === 0);
-
-  const subtotal = getCartSubtotal();
-  const delivery = subtotal < DELIVERY_THRESHOLD ? DELIVERY_FEE : 0;
-  const grand = subtotal + delivery;
-
-  document.getElementById("subtotal").textContent = formatPrice(subtotal);
-  document.getElementById("delivery").textContent = formatPrice(delivery);
-  document.getElementById("grandTotal").textContent = formatPrice(grand);
-}
-
-function changeQty(shop, name, price, delta) {
-  if (!cart[shop]) cart[shop] = {};
-  if (!cart[shop][name]) cart[shop][name] = { qty: 0, price };
-
-  cart[shop][name].qty = Math.max(0, (cart[shop][name].qty || 0) + delta);
-
-  if (cart[shop][name].qty === 0) delete cart[shop][name];
-  if (Object.keys(cart[shop]).length === 0) delete cart[shop];
-
-  saveCart();
-  renderMenu();
-  updateCartUI();
-}
-
-// =============================================
-// RENDER MENU
-// =============================================
-
 function renderMenu() {
-  const container = document.getElementById("itemsContainer");
-  container.innerHTML = "";
-
   const shop = getShopFromURL();
   const items = shopMenus[shop] || [];
+  const container = document.getElementById("itemsContainer");
 
-  document.getElementById("shopName").textContent = shop || "Shop not found";
+  document.getElementById("shopName").textContent = shop;
 
-  document.getElementById("vegNonVegFilter").classList.toggle("active", shop === "Dolphin Hotel");
-
-  if (items.length === 0) {
-    container.innerHTML = `
-      <div class="empty-state">
-        <i class="fas fa-utensils"></i><br>No items available
-      </div>
-    `;
-    return;
-  }
+  container.innerHTML = "";
 
   items.forEach(item => {
-    if (shop === "Dolphin Hotel") {
-      if (currentFilter === "veg" && item.type === "nonveg") return;
-      if (currentFilter === "nonveg" && item.type === "veg") return;
-    }
-
     const price = getDisplayedPrice(item.originalPrice);
     const qty = cart[shop]?.[item.name]?.qty || 0;
 
-    const card = document.createElement("div");
-    card.className = "item-card";
-    card.innerHTML = `
-      <div class="item-content">
+    container.innerHTML += `
+      <div class="item-card">
         <div class="item-name">${item.name}</div>
-        <div class="item-price">${formatPrice(price)}</div>
+        <div class="item-price">₹${price}</div>
         <div class="quantity-row">
-          <button class="qty-btn" onclick="changeQty('${shop}', '${item.name.replace(/'/g,"\\'")}', ${price}, -1)">−</button>
+          <button class="qty-btn" onclick="changeQty('${shop}','${item.name}',${price},-1)">−</button>
           <span class="qty-value">${qty}</span>
-          <button class="qty-btn" onclick="changeQty('${shop}', '${item.name.replace(/'/g,"\\'")}', ${price}, 1)">+</button>
+          <button class="qty-btn" onclick="changeQty('${shop}','${item.name}',${price},1)">+</button>
         </div>
       </div>
     `;
-    container.appendChild(card);
   });
 }
 
-// =============================================
-// INIT
-// =============================================
-
-const currentShop = getShopFromURL();
-if (currentShop && shopMenus[currentShop]) {
-  document.getElementById("shopName").textContent = currentShop;
-} else {
-  document.getElementById("shopName").textContent = "Shop not found";
-}
-
-// Initial load
 renderMenu();
 updateCartUI();
 </script>
+
 </body>
 </html>
